--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -174,7 +174,7 @@ body {
   background-color:lightgray;
   margin-top:10px;
   margin-bottom:10px;
-  height:1000px;
+  
 }
 .category-tile span {
   position: relative;
@@ -190,8 +190,9 @@ body {
 }
 
 
-#menu-categories-title + div {
-  margin-bottom: 50px;
+#menu-categories-title  {
+  margin-top: 60px;
+  display:block;
 }
 /* END MENU CATEGORIES PAGE */
 
